# docs/openapi.yml
@@ -216,6 +216,131 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /posts/sorted:
+    get:
+      summary: returns a list of sorted post by recent date
+      tags:
+        - post
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: returns a list of sorted posts by recent date
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Post"
+        "401":
+          description: fail
+  /posts/{id}:
+    put:
+      tags:
+        - post
+      summary: Update a post
+      description: This allows an authenticated user to update their post.
+      operationId: updatePost
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        description: Post content update
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                content:
+                  type: string
+      responses:
+        200:
+          description: Successfully updated post
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+        400:
+          description: Bad request (invalid input)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
+          description: Post not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+    delete:
+      tags:
+        - post
+      summary: Delete a post
+      description: This allows an authenticated user to delete their post.
+      operationId: deletePost
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Successfully deleted post
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
+          description: Post not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /posts/mine:
+    get:
+      summary: Get all posts created by the authenticated user sorted by date
+      tags:
+        - post
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Returns a list of posts created by the logged-in user sorted by date
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Post"
+        "401":
+          description: Unauthorized
+
+
   /logs:
     post:
       tags:
@@ -256,6 +381,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  
   /cohorts:
     post:
       tags:
